--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,27 @@ h2, h3, h4 {
     background-color: antiquewhite;
 }
 
+span[data-descr] {
+    position: relative;
+    text-decoration: underline;
+    color: #000;
+    cursor: grab;
+}
+
+span[data-descr]:hover::after {
+    content: attr(data-descr);
+    position: absolute;
+    left: 0px;
+    bottom: 24px;
+    min-width: 200px;
+    border: 1px black solid;
+    background-color: yellow;
+    padding: 12px;
+    color: black;
+    font-size: 80%;
+    z-index: 1;
+}
+
 .headerdescrip {
     margin-left: 20px;
     margin-top: -25px;
@@ -55,6 +76,8 @@ h2, h3, h4 {
     padding: 14px, 16px;
     text-decoration: none;
     margin-right: 20px;
+    margin-left: 20px;
+    font-size: 20px;
 }
 
 .navbar a:hover {
