--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,7 @@
 
 body {
     margin: 0px;
+    flex-wrap: wrap;
 }
 
 h1 {
@@ -57,7 +58,9 @@ span[data-descr]:hover::after {
     height: auto;
     margin-left: auto;
     margin-right: auto;
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .navbar {
@@ -66,6 +69,7 @@ span[data-descr]:hover::after {
     position: fixed;
     top: 0;
     width: 100%;
+    display: flex;
 }
 
 .navbar a {
@@ -95,3 +99,10 @@ span[data-descr]:hover::after {
     font-size: 15px;
     font-weight: bold;
 }
+
+@media screen and (max-width: 768px) {
+    main,
+    nav {
+      flex-direction: column;
+    }
+  }  
