--- a/assets/style.css
+++ b/assets/style.css
@@ -12,6 +12,7 @@ h1 {
     font-size: 45px;
     color: #333;
     text-align: center;
+    flex: 0 0 400px;
 }
 
 h2, h3, h4 {
@@ -69,7 +70,6 @@ span[data-descr]:hover::after {
     position: fixed;
     top: 0;
     width: 100%;
-    display: flex;
 }
 
 .navbar a {
